--- a/package.json
+++ b/package.json
@@ -36,15 +36,17 @@
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "7.23.3",
     "@babel/runtime": "^7.12.5",
-    "@storybook/addon-essentials": "^7.6.7",
-    "@storybook/addon-interactions": "^7.6.7",
-    "@storybook/addon-links": "^7.6.7",
-    "@storybook/addon-onboarding": "^1.0.10",
-    "@storybook/addon-styling-webpack": "^0.0.5",
-    "@storybook/blocks": "^7.6.7",
-    "@storybook/react": "^7.6.7",
-    "@storybook/react-webpack5": "^7.6.7",
-    "@storybook/test": "^7.6.7",
+    "@chromatic-com/storybook": "^3",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/addon-styling-webpack": "^1.0.1",
+    "@storybook/addon-webpack5-compiler-swc": "^2.0.0",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-webpack5": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@svgr/webpack": "^4.3.3",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -79,7 +81,7 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-storybook": "0.6.15",
+    "eslint-plugin-storybook": "^0.11.2",
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "5.6.0",
@@ -97,7 +99,7 @@
     "react-test-renderer": "^18.2.0",
     "single-spa-react": "^5.0.0",
     "source-map-loader": "4.0.2",
-    "storybook": "^7.6.7",
+    "storybook": "^8.4.7",
     "style-loader": "^1.0.0",
     "stylelint": "^11.1.1",
     "stylelint-config-standard": "^19.0.0",
