feat: upgrade eslint

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@babel/preset-typescript": "7.23.3",
     "@babel/runtime": "^7.12.5",
     "@chromatic-com/storybook": "^3",
+    "@eslint/compat": "1.1.1",
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.11.1",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-links": "^8.4.7",
@@ -47,14 +50,14 @@
     "@storybook/react": "^8.4.7",
     "@storybook/react-webpack5": "^8.4.7",
     "@storybook/test": "^8.4.7",
-    "@svgr/webpack": "^4.3.3",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.6",
-    "@types/react": "18.2.46",
+    "@types/react": "19.0.3",
     "@types/react-color": "3.0.12",
-    "@types/react-dom": "18.2.18",
+    "@types/react-dom": "19.0.2",
     "@types/react-is": "18.2.4",
     "@types/reactour": "1.18.5",
     "@types/systemjs": "^6.1.0",
@@ -71,7 +74,7 @@
     "css-loader": "^3.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "7.32.0",
+    "eslint": "9.11.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^7.0.0",
     "eslint-config-react-important-stuff": "^3.0.0",
@@ -80,10 +83,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-storybook": "^0.11.2",
-    "eslint-webpack-plugin": "^2.5.2",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-storybook": "0.11.2",
+    "eslint-webpack-plugin": "4.2.0",
     "file-loader": "^4.2.0",
+    "globals": "15.9.0",
     "html-webpack-plugin": "5.6.0",
     "husky": "^4.3.5",
     "identity-obj-proxy": "^3.0.0",
