fix: install new deps and fix TS

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@testing-library/react": "^11.2.2",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.6",
-    "@types/react": "18.2.46",
+    "@types/react": "19.1.6",
     "@types/react-color": "3.0.12",
     "@types/react-dom": "18.2.18",
     "@types/react-is": "18.2.4",
@@ -111,7 +111,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.12.1",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@lucataglia/react-json-tree": "0.18.0",
@@ -126,7 +126,7 @@
     "react": "^18.2.0",
     "react-ace": "^9.4.0",
     "react-codemirror2": "^6.0.0",
-    "react-color": "^2.19.3",
+    "react-color": "2.19.3",
     "react-dnd": "^14.0.3",
     "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "^18.2.0",
